# ics-filter

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  api.py  blacklist.json  build-and-fetch-cron  build.py  config.ini  config.toml  constants.py  diesel.toml  docker-compose.yaml  entrypoint.py  fetch.py  git.py  main.py  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  urls.json  version_control.py  watchdog.py
.github/workflows/: release.yml
migrations/2025-11-19-132936-0000_create_calendars/: down.sql  up.sql
migrations/2025-11-19-132947-0000_create_events/: up.sql
migrations/2025-11-19-133751-0000_create_event_snapshots/: down.sql  up.sql
migrations/2025-11-19-133814-0000_create_filters/: down.sql  up.sql
migrations/2025-11-19-133822-0000_create_filter_criteria/: down.sql  up.sql
migrations/2025-11-19-133839-0000_create_filtered_calendars/: down.sql  up.sql
migrations/2025-11-19-171806-0000_create_filter_criteria_filters/: down.sql  up.sql
migrations/2025-12-10-144625-0000_initial_schema/: down.sql  up.sql
migrations/2025-12-10-161220-0000_initial_functions_and_triggers/: down.sql  up.sql
src/: cache.rs  calendar.rs  config.rs  database.rs  diff.rs  git_repo.rs  main.rs  notification.rs  schema.patch  schema.rs  version_control.rs
src/models/: color.rs  database.rs  filter.rs  mod.rs  status.rs
src/models/calendar/: calendar.rs  color.rs  filtered_calendar.rs  mod.rs
src/models/event/: event.rs  event_snapshot.rs  mod.rs
src/models/filter/: filter.rs  filter_criteria.rs  mod.rs
