[package]
name = "ics-filter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
config = { version = "0.15.11", features = ["toml"] }
diff = "0.1.13"
git2 = "0.20.1"
icalendar = { version = "0.16.13", features = ["parser"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
