[package]
name = "ics-filter"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
git2 = "0.20.2"
icalendar = { version = "0.16.13", features = ["parser"] }
lettre = "0.11.16"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
similar = "2.7.0"
text-tables = "0.3.1"
toml = "0.8.22"
url = { version = "2.5.4", features = ["serde"] }
