[project]
name = "ics-filter-prototyping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "gitpython>=3.1.43",
    "ics>=0.7.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "ruff>=0.7.3",
]
